@@ -779,5 +779,7 @@ Version 1.4-7
 Version 1.4-8
 
    o  Export data set now allows an arbitrary field separator (suggested by Marilia Sa Carvalho).
+   
+   o  Menus can now use translation files supplied by plug-ins.
 	
    o  Small changes.
